--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,18 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Ignore Hyperskill course files
+.idea/
+*.iml
+out/
+test/
+lessons/
+.hyperskill/
+*.txt
+
+# Include your Java Gradle project
+!gradle/
+!src/
+!build.gradle
+!settings.gradle
